--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
@@ -47,5 +47,5 @@
   "ct3aMetadata": {
     "initVersion": "7.33.1"
   },
-  "packageManager": "pnpm@9.1.2"
+  "packageManager": "pnpm@9.0.4"
 }
