--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "5.0.0-beta.46",
+    "@radix-ui/react-slot": "^1.0.2",
     "@sentry/nextjs": "8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@uploadthing/react": "^6.6.0",
